[package]
name = "nx_cache"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
nx_hasher = { workspace = true }
nx_walker = { workspace = true }
nx_glob = { workspace = true }
nx_db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
rkyv = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
tempfile = { workspace = true }
