[package]
name = "nx_project_graph"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
nx_hasher = { workspace = true }
nx_walker = { workspace = true }
nx_glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
swc_common = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_ast = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
tempfile = { workspace = true }
swc_ecma_dep_graph = { workspace = true }
