[package]
name = "nx_pty"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
nx_logger = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
portable-pty = { workspace = true }
crossterm = { workspace = true }

[target.'cfg(all(not(windows), not(target_family = "wasm")))'.dependencies]
mio = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

